--- a/strongram-core/pom.xml
+++ b/strongram-core/pom.xml
@@ -23,10 +23,6 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-meta</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots-client</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -38,6 +34,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>26.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
-
 </project>
