--- a/strongram-webhook/pom.xml
+++ b/strongram-webhook/pom.xml
@@ -32,8 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.telegram</groupId>
-            <artifactId>telegrambots-client-jetty-adapter</artifactId>
-            <version>9.0.0</version>
+            <artifactId>telegrambots-client</artifactId>
         </dependency>
 
         <dependency>
